2009-04-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateToFindRangeBounds): Handle StatisticalCategoryDataset.

2009-04-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (addItemEntity): Check getItemCreateEntity(),
    (addEntity): New method,
    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (defaultEntityRadius): New field,
    (AbstractRenderer): Initialise new field,
    (getDefaultEntityRadius): New method,
    (setDefaultEntityRadius): New method,
    (equals): Check new field,
    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (defaultEntityRadius): Moved to superclass,
    (getDefaultEntityRadius): Likewise,
    (setDefaultEntityRadius): Likewise,
    (equals): Moved check for defaultEntityRadius to superclass,
    * source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
    (findRangeBounds): New method override,
    (drawItem): Use new addEntity() method.

2009-04-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (panMask): New field,
    (ChartPanel): Initialise panMask differently on MacOSX,
    (mousePressed): Use panMask field,
    (mouseDragged): Fixed signs on drag percents.

2009-03-30  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/LogAxis.java
    (pan): New method,
    * source/org/jfree/chart/axis/ValueAxis.java
    (pan): Likewise,
    * source/org/jfree/chart/plot/XYPlot.java
    (panDomainAxes): Delegate to axes,
    (panRangeAxes): Delegate to axes.

2009-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/LookupPaintScale.java
    (PaintItem): Changed to static.

2009-03-28  David Gilbert  <david.gilbert@object-refinery.com>
